infra/k8s/manifests/kyverno-policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  rules:
    - name: deny-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
      exclude:
        any:
          - resources:
              namespaces:
                - ingress-nginx
          - resources:
              namespaces:
                - argocd
              names:
                - "my-argo-cd-argocd-repo-server*"
                - "my-argo-cd-argocd-redis*"
      validate:
        message: >-
          Privileged containers are not allowed.
        anyPattern:
          - spec:
              containers:
                - securityContext:
                    privileged: "false"
          - spec:
              template:
                spec:
                  containers:
                    - securityContext:
                        privileged: "false"
